--- a/keycloak/dissco-theme/login/resources/css/styles.css
+++ b/keycloak/dissco-theme/login/resources/css/styles.css
@@ -13,8 +13,8 @@ body {
     font-family: 'Montserrat', serif !important;
 }
 
-.pf-v5-u-m-auto {
-    color: #4d59a2 !important;
+#dissco-logo {
+    margin-bottom: 50px;
 }
 
 .pf-v5-c-title {
@@ -62,7 +62,6 @@ div.kc-logo-text span {
     display: none;
 }
 
-
 #kc-header-wrapper {
     font-size: 29px;
     line-height: 1.2em;
@@ -83,10 +82,6 @@ hr {
     margin-bottom: var(--pf-v5-global--spacer--md);
 }
 
-#kc-social-providers svg:not(.google) {
-    filter: invert(47%) sepia(88%) saturate(7486%) hue-rotate(199deg) brightness(91%) contrast(101%);
-}
-
 #kc-social-providers svg {
     height: var(--pf-v5-global--FontSize--xl);
 }
@@ -95,23 +90,75 @@ hr {
 #footer {
     padding: 15px 200px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    font-size: .75rem;
 }
 
 #footer ul {
     display: flex;
 }
 
-#footer ul li {
+#footer ul li:not(:last-child) {
     padding-right: 40px;
-    font-size: .75rem;
 }
 
 #footer ul li a {
-    color: #28bacb;
+    color: #4d59a2;
     text-decoration: none;
 }
 
-#eu-funded-logo {
-    height: 2rem;
+#footer ul li a:hover {
+    font-weight: 700;
+}
+
+/* Social providers */
+.social-provider-item {
+    border: 1px solid black;
+    color: black;
+}
+
+.social-provider-item:hover {
+    -webkit-box-shadow:inset 0px 0px 0px 1px #4d59a2;
+    -moz-box-shadow:inset 0px 0px 0px 1px #4d59a2;
+    box-shadow:inset 0px 0px 0px 1px #4d59a2;
+    border: 1px solid #4d59a2;
+    color: #4d59a2 !important;
+}
+
+/* Static pages */
+.static-page {
+    min-width: 320px;
+    max-width: 753px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 200px;
+}
+
+@media screen and (min-width: 992px) {
+    .static-page {
+        max-width: 753px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+  }
+  
+
+@media screen and (min-width: 1300px) {
+    .static-page {
+        max-width: 1072px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+  }
+
+h1, h2 {
+    font-weight: 400;
+}
+
+p, li {
+    line-height: 1.4em;
+}
+
+header {
+    padding-top: 50px;
 }
