--- a/keycloak/dissco-theme/login/resources/css/styles.css
+++ b/keycloak/dissco-theme/login/resources/css/styles.css
@@ -24,10 +24,6 @@
                          "main"
 }
 
-.pf-v5-c-login__main-header {
-    border-top: 4px solid var(--keycloak-card-top-color);
-}
-
 /* Info section - top margin + bottom padding */
 .pf-v5-c-login__main-footer-band:first-child {
     margin-block-start: var(--pf-v5-global--spacer--lg);
@@ -203,4 +199,10 @@ h1, h2 {
 
 .dissco-logo {
     height: 200px
+}
+
+#kc-page-title {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 25px;
 }
